--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,10 +2,10 @@
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    android:id="@+id/drawerLayout"
     tools:context=".MainActivity">
 
 
@@ -17,7 +17,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?actionBarSize"
-            android:background="#29B6F6"
+            android:background="#E8DEF8"
             android:orientation="horizontal"
             android:paddingStart="15dp"
             android:paddingEnd="15dp"
@@ -43,15 +43,19 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.navigation.NavigationView
-        app:menu="@menu/navigation_drawer"
-        app:headerLayout="@layout/drawer_heding"
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        app:headerLayout="@layout/drawer_heding"
+        app:itemShapeAppearance="@style/myItemShapeAppearance"
+        app:itemVerticalPadding="20dp"
+        app:itemIconPadding="20dp"
+        app:shapeAppearance="@style/myShapeAppearance"
+        app:itemShapeFillColor="#E8DEF8"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:menu="@menu/navigation_drawer" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
