--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,7 +10,16 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" tools:targetApi="l">#E8DEF8</item>
         <!-- Customize your theme here. -->
+    </style>
+    <!--    custom ShapeAppearance-->
+    <style name="myItemShapeAppearance" parent="">
+    <item name="cornerFamily">rounded</item>
+    <item name="cornerSize">40dp</item>
+    </style>
+    <style name="myShapeAppearance" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">10dp</item>
     </style>
 </resources>
