--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,7 +10,7 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">#E8DEF8</item>
+        <item name="android:statusBarColor" tools:targetApi="l">#7E57C2</item>
         <!-- Customize your theme here. -->
     </style>
     <!--    custom ShapeAppearance-->
